--- a/config/database.yml
+++ b/config/database.yml
@@ -15,6 +15,8 @@
 # gem 'pg'
 #
 default: &default
+  username: miker
+  password: password
   adapter: postgresql
   encoding: unicode
   # For details on connection pooling, see Rails configuration guide
@@ -24,8 +26,6 @@ default: &default
 development:
   <<: *default
   database: forecast_development
-  user: miker
-  password: password
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
